--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@arcjet/ip": "^1.0.0-beta.12",
+    "@arcjet/next": "^1.0.0-beta.12",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
